Update for pull request #3
