# python-flask/openapi_server/controllers/developers_controller.py
@@ -1,34 +1,25 @@
-# Standard library imports
+import connexion
+import six
 
-# import connexion
-# import six
-
-# from openapi_server.models.log_entry import LogEntry
-from openapi_server.models.robots_file import RobotsFile
-# from openapi_server.models.sci_metadata import SCIMetadata
-from openapi_server.models.sitemap import Sitemap
-# from openapi_server import util
-
+from openapi_server.models.robots_file import RobotsFile  # noqa: E501
+from openapi_server.models.sci_metadata import SCIMetadata  # noqa: E501
+from openapi_server.models.so_metadata import SOMetadata  # noqa: E501
+from openapi_server.models.sitemap import Sitemap  # noqa: E501
+from openapi_server import util
 from . import business_logic as bl
 
 
 def get_validate_metadata(url, formatid):  # noqa: E501
     """Retrieve and validate a science metadata XML document
 
-    Given a url referencing an XML metadata document, retrieve and validate the
-    XML.  This corresponds to the /scimeta GET endpoint.
+    Given a url referencing an XML metadata document, retrieve and validate the XML.  # noqa: E501
 
-    Parameters
-    ----------
-    url : str
-        URL referencing a science metadata XML document to retrieve and
-        validate.
-    formatid : str
-        The DataONE formatId of the XML to test for validity.
+    :param url: URL referencing a science metadata XML document to retrieve  and validate. 
+    :type url: str
+    :param formatid: The DataONE formatId of the XML to test for validity. 
+    :type formatid: str
 
-    Returns
-    -------
-    SCIMetadata
+    :rtype: SCIMetadata
     """
     return bl.get_validate_metadata(url, formatid)
 
@@ -36,20 +27,14 @@ def get_validate_metadata(url, formatid):  # noqa: E501
 def get_validate_so(url, type_=None):  # noqa: E501
     """Retrieve and validate a schema.org JSON-LD document
 
-    Given a url referencing a schema.org JSON-LD document, verify that
-    the structure matches expected model indicated in the type parameter.  This
-    corresponds to the /sovalid endpoint.
+    Given a url referencing a schema.org JSON-LD document, verify that  the structure matches expected model indicated in the type parameter.  # noqa: E501
 
-    Parameters
-    ----------
-    url : str
-        URL referencing a schema.org JSON-LD document to retrieve and validate.
-    type : str
-        The name of the schema.org type to test for validity.
+    :param url: URL referencing a schema.org JSON-LD document to retrieve and validate. 
+    :type url: str
+    :param type: The name of the schema.org type to test for validity. 
+    :type type: str
 
-    Returns
-    -------
-    SOMetadata
+    :rtype: SOMetadata
     """
     return bl.get_validate_so(url, type_=type_)
 
@@ -59,7 +44,7 @@ def parse_langingpage(url):  # noqa: E501
 
     Parses landing page to extract schema.org metadata  # noqa: E501
 
-    :param url: URL pointing to landing page to be parsed
+    :param url: URL pointing to langing page to be parsed 
     :type url: str
 
     :rtype: SOMetadata
@@ -67,66 +52,57 @@ def parse_langingpage(url):  # noqa: E501
     return bl.parse_landing_page(url)
 
 
-def parse_robots(url):
-    """
-    Parses robots.txt to find sitemap(s).  This corresponds to the /robots
-    endpoint.
+def parse_robots(url):  # noqa: E501
+    """Parses robots.txt to find sitemap(s)
 
-    Given a robots.txt file, parse, and retrieve referenced sitemap documents.
+    Given a robots.txt file, parse, and retrieve referenced sitemap documents.  # noqa: E501
 
     :param url: URL pointing to a robots.txt file
     :type url: str
 
     :rtype: RobotsFile
     """
-    robots_file, status = bl.parse_robots(url)
-    return robots_file, status
+    return bl.parse_robots(url)
 
 
 def parse_sitemap(url, maxlocs=None):  # noqa: E501
     """Parses sitemap.xml
 
-    Parses a sitemap to retrieve entries.
+    Parses a sitemap to retrieve entries. # noqa: E501
 
-    Parameters
-    ----------
-    url : str
-        URL pointing to a sitemap xml document.
-    maxlocs : int
-        Maximum number of sitemap locations to return (100)
+    :param url: URL pointing to a sitemap xml document.
+    :type url: str
+    :param maxlocs: Maximum number of sitemap locations to return 
+    :type maxlocs: int
 
-    Returns
-    -------
-    Sitemap, HTTP status code
+    :rtype: Sitemap
     """
-    sitemap, status_code = bl.parse_sitemap(url, maxlocs=maxlocs)
-    return sitemap, status_code
+    return bl.parse_sitemap(url, maxlocs=maxlocs)
 
 
-def validate_metadata(formatid, body):
+def validate_metadata(formatid, body):  # noqa: E501
     """Validate provided schema.org JSON-LD document
 
     Given an XML metadata document, validate the XML.  # noqa: E501
 
-    :param formatid: The DataONE formatId of the XML to test for validity.
+    :param formatid: The DataONE formatId of the XML to test for validity. 
     :type formatid: str
-    :param body: Science metadata XML document to validate.
+    :param body: Science metadata XML document to validate. 
     :type body: str
 
     :rtype: SCIMetadata
     """
-    return 'do some magic!'
+    return bl.validate_metadata(formatid, body)
 
 
 def validate_so(body, type_=None):  # noqa: E501
     """Validate provided schema.org JSON-LD document
 
-    Given a schema.org JSON-LD document, verify that the structure
-    matches expected model indicated in the type parameter.
+    Given a schema.org JSON-LD document, verify that the structure  matches expected model indicated in the type parameter.  # noqa: E501
 
-    :param body: Schema.org JSON-LD to validate.
-    :type body:
-    :param type: The name of the schema.org type to test for validity.
+    :param body: Schema.org JSON-LD to validate. 
+    :type body: 
+    :param type: The name of the schema.org type to test for validity. 
     :type type: str
 
     :rtype: SOMetadata
